# coherent_search

./: .gitignore  README.md  fourierinterp.py  pixi.toml  pyproject.toml
examples/: harmonics_hi.mak  interp_accuracy.py  simple_coherent_fold.py  simple_test.py  speed_test.py
src/coherent_search/: coherent_search.py  fourierinterp.py  utils.py
tests/: test_fourierinterp.py
